<resources>
    <string name="app_name">Cherry Camera!</string>
    <string name="banner_ad_app_id">ca-app-pub-8684079291236473~3223922635</string>
    <string name="banner_ad_unit_id">ca-app-pub-8684079291236473/6177389032</string>
    <string name="upload_message">Hold on. please.</string>
    <string name="notmodemessage">Not support Mode</string>
    <string name="caution_lowdevice">caution low-end devices</string>
    <string name="alerttitle">Alert</string>
    <string name="finishmessage">Do you want Finish?</string>
    <string name="msg_yes">YES</string>
    <string name="msg_no">NO</string>
    <string name="eraseMessage">Do you want to erase this picture?</string>
    <string name="wrong_file">this file is blank!</string>
    <string name="upload_save_message">Saving photo. please wait...</string>
    <string name="cannot_camera">The camera can not be found. (Try reboot the device.)</string>
    <string name="change_resolution">Change the picture size</string>
    <string name="file_delete_success">file delete successful!</string>
    <string name="frontcamera">frontcamera</string>
    <string name="scene_default">default</string>
    <string name="scene_action">action</string>
    <string name="scene_auto">auto</string>
    <string name="scene_barcode">barcode</string>
    <string name="scene_beach">beach</string>
    <string name="scene_candlelight">candlelight</string>
    <string name="scene_fireworks">fireworks</string>
    <string name="scene_landscape">landscape</string>
    <string name="scene_night">night</string>
    <string name="scene_night_portrait">night portrait</string>
    <string name="scene_party">party</string>
    <string name="scene_portrait">portrait</string>
    <string name="scene_snow">snow</string>
    <string name="scene_sports">sports</string>
    <string name="scene_steadyphoto">steadyphoto</string>
    <string name="scene_sunset">sunset</string>
    <string name="scene_theatre">theatre</string>
    <string name="scene_flowers">flowers</string>
    <string name="scene_hdr">hdr</string>
    <string name="camera_option">Option</string>
    <string name="camera_option_help">Help</string>
    <string name="camera_option_resolution">Picture Size</string>
    <string name="camera_option_flash">Flash Mode</string>
    <string name="camera_option_focus">Focus Mode</string>
    <string name="camera_option_effect">Color Effect</string>
    <string name="camera_option_expo">Exposure</string>
    <string name="camera_option_timer">Timer</string>
    <string name="camera_option_whitebalance">White Balance</string>
    <string name="camera_option_frontfacing">Front Camera</string>
    <string name="camera_option_rearfacing">Rear Camera</string>
    <string name="camera_option_filter">Filter</string>
    <string name="camera_option_flashauto">Flash Auto</string>
    <string name="camera_option_flashon">Flash On</string>
    <string name="camera_option_flashoff">Flash Off</string>
    <string name="camera_option_flashtorch">Torch</string>
    <string name="camera_option_flashredeye">Remove Red Eye</string>
    <string name="camera_option_focusauto">Focus Auto</string>
    <string name="camera_option_focusmacro">Macro</string>
    <string name="camera_option_focusinfinity">Infinity</string>
    <string name="camera_option_focusfix">Focus Fix</string>
    <string name="camera_option_timerbeep">Timer Beep</string>
    <string name="camera_option_timer0">Timer Off</string>
    <string name="camera_option_timer3">Timer 3s</string>
    <string name="camera_option_timer5">Timer 5s</string>
    <string name="camera_option_timer10">Timer 10s</string>
    <string name="camera_option_timer30">Timer 30s</string>
    <string name="camera_option_filter0">None(default)</string>
    <string name="camera_option_filter1">Cherry Blossom1</string>
    <string name="camera_option_filter2">Cherry Blossom2</string>
    <string name="camera_option_filter3">Snow Flower</string>
    <string name="alert_none_image">There are no photos taken.</string>
    <string name="camera_help_shoot">Shoot</string>
    <string name="camera_help_gallery">Photo Gallery</string>
    <string name="unmount_sdcard">External memory is required. Please mount the external memory.</string>
    <string name="big_resolution">Out of memory.Please lowering the resolution of the picture.\n(Reducing the size of the captured photos)</string>
    <string name="front_facing">Facing Front</string>
    <string name="back_facing">Facing Back</string>
    <string name="menutab_camera">camera mode</string>
    <string name="menutab_scene">scene mode</string>
    <string name="menutab_gallery">gallery</string>
    <string name="menutab_finish">finish</string>
    <string name="exif_width">width</string>
    <string name="exif_height">height</string>
    <string name="exif_filesize">File size</string>
    <string name="exif_make">Make</string>
    <string name="exif_model">Model</string>
    <string name="exif_time">Date/Time</string>
    <string name="exif_orientation">Orientation</string>
    <string name="exif_focallength">FocalLength</string>
    <string name="exif_expotime">ExposureTime</string>
    <string name="exif_whitebalance">WhiteBalence</string>
    <string name="exif_fnumber">F-Number</string>
    <string name="exif_iso">ISO</string>
    <string name="alert_info">Info</string>
    <string name="alert_freememory_message1">Free Memory</string>
    <string name="alert_freememory_message2">Battery</string>
    <string name="alert_freememory_message3">Resolution</string>
    <string name="info_privacy">Privacy Info</string>
    <string name="permission_denied">If you do not give permission to the app, you will not be able to use it.</string>
    <string name="camera_auto">auto</string>
    <string name="camera_manual">manual</string>
	<string name="descr_image">Image</string>
  <string name="qr_reader">QR Scanner</string>
  <string name="app_picker_name">Applications</string>
  <string name="bookmark_picker_name">Bookmarks</string>
  <string name="button_add_calendar">Add to calendar</string>
  <string name="button_add_contact">Add contact</string>
  <string name="button_back">Back</string>
  <string name="button_book_search">Book Search</string>
  <string name="button_cancel">Cancel</string>
  <string name="button_custom_product_search">Custom search</string>
  <string name="button_dial">Dial number</string>
  <string name="button_done">Done</string>
  <string name="button_email">Send email</string>
  <string name="button_get_directions">Get directions</string>
  <string name="button_google_shopper">Shopper</string>
  <string name="button_mms">Send MMS</string>
  <string name="button_ok">OK</string>
  <string name="button_open_browser">Open browser</string>
  <string name="button_product_search">Product Search</string>
  <string name="button_search_book_contents">Search contents</string>
  <string name="button_share_app">Application</string>
  <string name="button_share_bookmark">Bookmark</string>
  <string name="button_share_by_email">Share via email</string>
  <string name="button_share_by_sms">Share via SMS</string>
  <string name="button_share_clipboard">Clipboard</string>
  <string name="button_share_contact">Contact</string>
  <string name="button_show_map">Show map</string>
  <string name="button_sms">Send SMS</string>
  <string name="button_web_search">Web search</string>
  <string name="button_wifi">Connect to Network</string>
  <string name="contents_contact">Contact info</string>
  <string name="contents_email">Email address</string>
  <string name="contents_location">Geographic coordinates</string>
  <string name="contents_phone">Phone number</string>
  <string name="contents_sms">SMS address</string>
  <string name="contents_text">Plain text</string>
  <string name="history_clear_text">Clear history</string>
  <string name="history_clear_one_history_text">Clear</string>
  <string name="history_email_title">Barcode Scanner history</string>
  <string name="history_empty">Empty</string>
  <string name="history_empty_detail">No barcode scans have been recorded</string>
  <string name="history_send">Send history</string>
  <string name="history_title">History</string>
  <string name="menu_encode_mecard">Use MECARD</string>
  <string name="menu_encode_vcard">Use vCard</string>
  <string name="menu_help">Help</string>
  <string name="menu_history">History</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_share">Share</string>
  <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
  <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
  <string name="msg_default_format">Format</string>
  <string name="msg_default_meta">Metadata</string>
  <string name="msg_default_mms_subject">Hi</string>
  <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
  <string name="msg_default_time">Time</string>
  <string name="msg_default_type">Type</string>
  <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
  <string name="msg_google_books">Google Books</string>
  <string name="msg_google_product">Google Product Search</string>
  <string name="msg_google_shopper_missing">Google Shopper is not installed</string>
  <string name="msg_install_google_shopper">Google Shopper combines barcode scanning with online and local prices, reviews and more without opening the browser. Would you like to try it?</string>
  <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
  <string name="msg_redirect">Redirect</string>
  <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
  <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
  <string name="msg_sbc_no_page_returned">No page returned</string>
  <string name="msg_sbc_page">Page</string>
  <string name="msg_sbc_results">Results</string>
  <string name="msg_sbc_searching_book">Searching book\u2026</string>
  <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
  <string name="msg_sbc_unknown_page">Unknown page</string>
  <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
  <string name="msg_share_subject_line">Here are the contents of a barcode I scanned</string>
  <string name="msg_share_text">Or type some text and press Enter</string>
  <string name="msg_sure">Are you sure?</string>
  <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
  <string name="preferences_actions_title">When a barcode is found\u2026</string>
  <string name="preferences_auto_focus_title">Use auto focus</string>
  <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
  <string name="preferences_bulk_mode_title">Bulk scan mode</string>
  <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
  <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
  <string name="preferences_custom_product_search_title">Custom search URL</string>
  <string name="preferences_decode_1D_title">1D barcodes</string>
  <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
  <string name="preferences_decode_QR_title">QR Codes</string>
  <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
  <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
  <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
  <string name="preferences_disable_exposure_title">No exposure</string>
</resources>