<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp" >

        <FrameLayout
            android:id="@+id/scnMenuLayout_0_1"
            android:layout_width="@dimen/MAIN_MENU_HEIGHT"
            android:layout_height="@dimen/MAIN_MENU_HEIGHT" >

            <ImageView
                android:id="@+id/menu_image_0_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/icon_party" />

            <Button
                android:id="@+id/menu_button_0_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/selector_menu_scnbutton" />

            <TextView
                android:id="@+id/menu_text_0_1"
                style="@style/MenuScnButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="2dp"
                android:text="@string/scene_auto"
                android:textSize="@dimen/FONTSIZE_Normal" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/scnMenuLayout_1_1"
            android:layout_width="@dimen/MAIN_MENU_HEIGHT"
            android:layout_height="@dimen/MAIN_MENU_HEIGHT">

            <ImageView
                android:id="@+id/menu_image_1_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/icon_portrait" />

            <Button
                android:id="@+id/menu_button_1_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/selector_menu_scnbutton" />

            <TextView
                android:id="@+id/menu_text_1_1"
                style="@style/MenuScnButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="2dp"
                android:text="@string/scene_portrait" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/scnMenuLayout_2_1"
            android:layout_width="@dimen/MAIN_MENU_HEIGHT"
            android:layout_height="@dimen/MAIN_MENU_HEIGHT">

            <ImageView
                android:id="@+id/menu_image_2_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/icon_landscape" />

            <Button
                android:id="@+id/menu_button_2_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/selector_menu_scnbutton" />

            <TextView
                android:id="@+id/menu_text_2_1"
                style="@style/MenuScnButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="2dp"
                android:text="@string/scene_landscape" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/scnMenuLayout_3_1"
            android:layout_width="@dimen/MAIN_MENU_HEIGHT"
            android:layout_height="@dimen/MAIN_MENU_HEIGHT">

            <ImageView
                android:id="@+id/menu_image_3_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/icon_night" />

            <Button
                android:id="@+id/menu_button_3_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/selector_menu_scnbutton" />

            <TextView
                android:id="@+id/menu_text_3_1"
                style="@style/MenuScnButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="2dp"
                android:text="@string/scene_night" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/scnMenuLayout_4_1"
            android:layout_width="@dimen/MAIN_MENU_HEIGHT"
            android:layout_height="@dimen/MAIN_MENU_HEIGHT">

            <ImageView
                android:id="@+id/menu_image_4_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/icon_flowers" />

            <Button
                android:id="@+id/menu_button_4_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/selector_menu_scnbutton" />

            <TextView
                android:id="@+id/menu_text_4_1"
                style="@style/MenuScnButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="2dp"
                android:text="@string/scene_flowers" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/scnMenuLayout_0_2"
            android:layout_width="@dimen/MAIN_MENU_HEIGHT"
            android:layout_height="@dimen/MAIN_MENU_HEIGHT" >

            <ImageView
                android:id="@+id/menu_image_0_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/icon_action" />

            <Button
                android:id="@+id/menu_button_0_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/selector_menu_scnbutton" />

            <TextView
                android:id="@+id/menu_text_0_2"
                style="@style/MenuScnButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="2dp"
                android:text="@string/scene_sports" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/scnMenuLayout_1_2"
            android:layout_width="@dimen/MAIN_MENU_HEIGHT"
            android:layout_height="@dimen/MAIN_MENU_HEIGHT" >

            <ImageView
                android:id="@+id/menu_image_1_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/icon_sunset" />

            <Button
                android:id="@+id/menu_button_1_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/selector_menu_scnbutton" />

            <TextView
                android:id="@+id/menu_text_1_2"
                style="@style/MenuScnButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="2dp"
                android:text="@string/scene_sunset" />
        </FrameLayout>

    </LinearLayout>

</LinearLayout>