<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="@dimen/px700"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/alert_bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/px60"
    android:paddingTop="@dimen/px50" >

    <TextView
        style="@style/DialogSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/px15"
        android:layout_marginLeft="@dimen/px40"
        android:layout_marginRight="@dimen/px40"
        android:text="@string/alert_freememory_message1" />

    <FrameLayout
        android:id="@+id/mem_alert_freemem_line_bg"
        android:layout_width="@dimen/px600"
        android:layout_height="@dimen/px10"
        android:layout_marginBottom="@dimen/px15"
        android:layout_marginLeft="@dimen/px40"
        android:layout_marginRight="@dimen/px40"
        android:layout_marginTop="@dimen/px20"
        android:background="@color/color_ltgray" >

        <LinearLayout
            android:id="@+id/mem_alert_freemem_line"
            android:layout_width="@dimen/px300"
            android:layout_height="match_parent"
            android:background="@color/color_blue"
            android:orientation="vertical" >
        </LinearLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/tv_mem_alert_freemem"
        style="@style/DialogContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/px25"
        android:layout_marginLeft="@dimen/px40"
        android:layout_marginRight="@dimen/px40"
        android:text="TextView" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px4"
        android:layout_marginBottom="@dimen/px10"
        android:layout_marginTop="@dimen/px10"
        android:background="@drawable/meminfo_line" />

    <TextView
        style="@style/DialogSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/px15"
        android:layout_marginLeft="@dimen/px40"
        android:layout_marginRight="@dimen/px40"
        android:text="@string/alert_freememory_message3" />

    <TextView
        android:id="@+id/tv_mem_alert_resolusion"
        style="@style/DialogContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/px25"
        android:layout_marginLeft="@dimen/px40"
        android:layout_marginRight="@dimen/px40"
        android:text="TextView" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px4"
        android:layout_marginBottom="@dimen/px10"
        android:layout_marginTop="@dimen/px10"
        android:background="@drawable/meminfo_line" />

    <TextView
        style="@style/DialogSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/px15"
        android:layout_marginLeft="@dimen/px40"
        android:layout_marginRight="@dimen/px40"
        android:text="@string/alert_freememory_message2" />

    <FrameLayout
        android:id="@+id/mem_alert_battery_line_bg"
        android:layout_width="@dimen/px600"
        android:layout_height="@dimen/px10"
        android:layout_marginBottom="@dimen/px15"
        android:layout_marginLeft="@dimen/px40"
        android:layout_marginRight="@dimen/px40"
        android:layout_marginTop="@dimen/px20"
        android:background="@color/color_ltgray" >

        <LinearLayout
            android:id="@+id/mem_alert_battery_line"
            android:layout_width="@dimen/px300"
            android:layout_height="match_parent"
            android:background="@color/color_blue"
            android:orientation="vertical" >
        </LinearLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/tv_mem_alert_battery"
        style="@style/DialogContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/px25"
        android:layout_marginLeft="@dimen/px40"
        android:layout_marginRight="@dimen/px40"
        android:text="TextView" />

    <Button
        android:id="@+id/btn_mem_alert_ok"
        android:layout_width="@dimen/px450"
        android:layout_height="@dimen/px180"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/px40"
        android:text="@string/button_ok" />

</LinearLayout>